<resources>
    <string name="app_name">Datonal</string>
    <string name="title_activity_tab">tab</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_text_password">Enter Text Password</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_pin_code">Enter Postal Code</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="plusbutton">plusButton</string>
    <string name="forget_page">Forget Page</string>
    <string name="try_to_recover">Try To Recover</string>
    <string name="addbutton">addButton</string>
    <string name="created_by_arup_basak">CREATED BY ARUP BASAK</string>
    <string name="loadinglogo">loadingLogo</string>
    <string name="heading">Title</string>
    <string name="user_id">User Id</string>
    <string name="please_enter_user_name_it_is_mandatory">Please Enter User Name, it is Mandatory</string>
    <string name="please_enter_password_it_is_mandatory">Please Enter Password, it is Mandatory</string>
    <string name="log_in">Log In</string>
    <string name="please_enter_phone_no_it_is_mandatory">Please Enter Phone No, it is Mandatory</string>
    <string name="please_enter_pin_code_it_is_mandatory">Please Enter Postal Code, it is Mandatory</string>
    <string name="please_enter_date_of_birth_it_is_mandatory">Please Enter Date of Birth, it is Mandatory</string>
    <string name="try_to_sign_in">Try To Sign In</string>
    <string name="hide_back">hide_back</string>
    <string name="string_hide_back">hide_back</string>
    <string name="enter_number_password">Enter Number Password</string>
    <string name="log_in_with_another_account">Sign Out</string>
    <string name="warning">Warning</string>
    <string name="password_must_be_8_numbers">PIN must be at least 8 Numbers</string>
    <string name="password_limitation">Password Must Be Included !, @, # ,$, % &amp; at least one</string>
    <string name="add_your_details">Add Your Details</string>
    <string name="title_is_required">Title is Required</string>
    <string name="user_name">User Name</string>
    <string name="pin">PIN</string>
    <string name="card_no">Card No</string>
    <string name="cvv">CVV</string>
    <string name="expire_date">Expiry date</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="this_is_not_card_format">This is Not Card Format</string>
    <string name="not_valid">Not Valid</string>
    <string name="pass_required">Password Must be Required</string>
    <string name="pin_required">Pin Must be Required</string>
    <string name="default_title">Default Title</string>
    <string name="content">Content</string>
    <string name="copybutton">copybutton</string>
    <string name="editbutton">editButton</string>
    <string name="check_your_personal_data">Check Your Personal Data</string>
    <string name="phone_no">Phone No</string>
    <string name="bank_account">Bank Account</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="save_data_warning">Insufficient Data</string>
    <string name="ifsc_code_required">IFSC Code Required</string>
    <string name="invalid_bank_account">Invalid Bank Account</string>
    <string name="phone_no_warn">Only Phone No Cannot be Saved</string>
    <string name="phone_no_invalid">Invalid Phone No</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="done">Done</string>
    <string name="please_write_pin_at_pin_box">PLease Write Pin at Pin Box</string>
    <string name="username_exists">User Name is Already Exists</string>
    <string name="username_cannot_be_done">Sign Up cannot be Done</string>
    <string name="something_is_wrong">Something is wrong, Please check Check Password and User Name</string>
    <string name="save_details_for_later">Save Details For Later</string>
    <string name="no_data">No Data</string>
    <string name="your_pin_is">Your PIN is</string>
    <string name="change_pin">Change PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="backbutton">BackButton</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="re_enter_new_pin">Re-Enter New PIN</string>
    <string name="close">Close</string>
    <string name="user_password">User-Password</string>
    <string name="bank_details">Bank Details</string>
    <string name="card_details">Card Details</string>
    <string name="notes">Notes</string>
    <string name="others">Others</string>
    <string name="all_field">All Field</string>
    <string name="yes_save_it">Yes, Save It</string>
    <string name="no">No</string>
    <string name="are_you_want_to_save_data">Are You want to Save Data?</string>
    <string name="cancel">cancel</string>
    <string name="mismatched_password">Password Mismatched</string>
    <string name="mismatched_password_username">Username and Password Mismatched</string>
    <string name="default_credit_num">1234 5678 9012 3456</string>
    <string name="default_cvv_no">123</string>
    <string name="default_exdate">12/34</string>
    <string name="default_ifsc">ABCD1234567</string>
    <string name="default_bank_number">12345678901234</string>
    <string name="to_copy_tap_the_text">TO COPY TAP THE TEXT</string>

</resources>