<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="40dp"
    android:background="@drawable/textbar_style"
    android:backgroundTint="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/light"
            android:text="@string/heading"
            android:textColor="@color/color2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewedData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/content"
            android:textColor="@color/color2"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/copy"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/copybutton"
        app:srcCompat="@drawable/ic_baseline_content_copy_60" />
</LinearLayout>