<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    android:orientation="vertical"
    tools:context=".ForgotNextViewPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/board_view"
        android:onClick="copy_pin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/your_pin_is"
            android:textColor="@color/color1"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/forgettable_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/no_data"
            android:textColor="@color/color1"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginIntent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color2"
            android:text="@string/log_in"
            android:textColor="@color/color1" />

        <Button
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color2"
            android:text="@string/change_pin"
            android:textColor="@color/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/pageAuthorForget"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/medium"
        android:gravity="bottom"
        android:text="@string/created_by_arup_basak"
        android:textColor="@color/color2"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>