<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_box"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pinFromChangePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="no"
        android:background="@drawable/textbar_style"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/enter_new_pin"
        android:inputType="numberPassword"
        android:textColorHint="@color/color2"
        android:textCursorDrawable="@drawable/cursor" />

    <EditText
        android:id="@+id/reenterpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textbar_style"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/re_enter_new_pin"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/color2"
        android:textCursorDrawable="@drawable/cursor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color2"
            android:fontFamily="@font/medium"
            android:text="@string/close"
            android:textColor="@color/color1" />

        <Button
            android:id="@+id/changePIN"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color2"
            android:fontFamily="@font/medium"
            android:text="@string/change_pin"
            android:textColor="@color/color1" />
    </LinearLayout>
</LinearLayout>