<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".UserDetails.login">

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/textbar_style"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/enter_user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/color2"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/color2"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeading"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/color2"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_in"
        android:textColor="@color/color1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="40dp"
        android:autofillHints="no"
        android:background="@drawable/textbar_style"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/enter_pin"
        android:inputType="numberPassword"
        android:textColor="@color/color2"
        android:textColorHint="@color/color2"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/custom_bordered_ripple"
            android:backgroundTint="@color/color1"
            android:fontFamily="@font/medium"
            android:onClick="forgetIntent"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/forget_password"
            android:textColor="@color/color2"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/signUpLButtonoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bordered_ripple"
            android:backgroundTint="@color/color1"
            android:fontFamily="@font/medium"
            android:onClick="signupIntent"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/color2"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/bold"
        android:text="@string/log_in"
        android:textColor="@color/color2"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/userWarningLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium_italic"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/passWarningLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium_italic"
        android:text="@string/please_enter_password_it_is_mandatory"
        android:textColor="#FB0000"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>